spacing issues

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -29,7 +29,7 @@ time {
 }
 
 .articles {
-	padding-top: 16rem;
+	padding-top: 10rem;
 }
 
 header {
