--- a/_sass/_tufte.scss
+++ b/_sass/_tufte.scss
@@ -84,7 +84,9 @@ p.subtitle { font-style: italic;
 .danger { color: red; }
 
 article { position: relative;
-          padding: 5rem 0rem; }
+          padding: 5rem 0rem; 
+		  line-height: 50%;
+	  }
 
 
 hr {
